#[[++

Copyright (C) 2021 Autodesk Inc.

All rights reserved.

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions are met:
    * Redistributions of source code must retain the above copyright
      notice, this list of conditions and the following disclaimer.
    * Redistributions in binary form must reproduce the above copyright
      notice, this list of conditions and the following disclaimer in the
      documentation and/or other materials provided with the distribution.
    * Neither the name of the Autodesk Inc. nor the
      names of its contributors may be used to endorse or promote products
      derived from this software without specific prior written permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS 'AS IS' AND
ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
DISCLAIMED. IN NO EVENT SHALL AUTODESK INC. BE LIABLE FOR ANY
DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.


This file has been generated by the Automatic Component Toolkit (ACT) version 1.7.0-develop.

Abstract: This is an autogenerated CMakeLists file for the development of MQTT Library.

Interface version: 1.0.0


]]

cmake_minimum_required(VERSION 3.5)

### The implementation of the MQTT Library component
project(LibMQTT)

set (CMAKE_CXX_STANDARD 11)

# The location of autogenerated interfaces
set(CMAKE_CURRENT_AUTOGENERATED_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Interfaces)

file(GLOB LIBMQTT_SRC
	${CMAKE_CURRENT_SOURCE_DIR}/Implementation/*.cpp
)
file(GLOB LIBMQTT_HDR
	${CMAKE_CURRENT_SOURCE_DIR}/Implementation/*.hpp
)
set(LIBMQTT_SRC ${LIBMQTT_SRC} ${LIBMQTT_SRC}
	${CMAKE_CURRENT_AUTOGENERATED_DIR}/libmqtt_interfaceexception.cpp
	${CMAKE_CURRENT_AUTOGENERATED_DIR}/libmqtt_interfacewrapper.cpp
	
	${CMAKE_CURRENT_SOURCE_DIR}/Libraries/backoffAlgorithm/backoff_algorithm.c
	${CMAKE_CURRENT_SOURCE_DIR}/Libraries/platform/windows/clock_posix.c
	${CMAKE_CURRENT_SOURCE_DIR}/Libraries/platform/windows/sockets_posix.c
	${CMAKE_CURRENT_SOURCE_DIR}/Libraries/platform/windows/openssl_posix.c
	${CMAKE_CURRENT_SOURCE_DIR}/Libraries/coreMQTT/core_mqtt.c
	${CMAKE_CURRENT_SOURCE_DIR}/Libraries/coreMQTT/core_mqtt_serializer.c
	${CMAKE_CURRENT_SOURCE_DIR}/Libraries/coreMQTT/core_mqtt_state.c
)

add_library(libmqtt SHARED ${LIBMQTT_SRC})
# Do not prefix the binary's name with "lib" on Unix systems:
set_target_properties(libmqtt PROPERTIES PREFIX "" IMPORT_PREFIX "" )
# The following two properties are crucial to reduce the number of undesirably exported symbols
set_target_properties(libmqtt PROPERTIES CXX_VISIBILITY_PRESET hidden)
set_target_properties(libmqtt PROPERTIES VISIBILITY_INLINES_HIDDEN ON)
# This makes sure symbols are exported
target_compile_options(libmqtt PRIVATE "-D__LIBMQTT_EXPORTS")
target_include_directories(libmqtt PRIVATE ${CMAKE_CURRENT_AUTOGENERATED_DIR})
target_include_directories(libmqtt PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Implementation)
target_include_directories(libmqtt PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Libraries/coreMQTT/interface)
target_include_directories(libmqtt PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Libraries/coreMQTT/include)
target_include_directories(libmqtt PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Libraries/platform/openssl_x64-windows/include/openssl)
target_include_directories(libmqtt PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Libraries/platform/openssl_x64-windows/include)
target_include_directories(libmqtt PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Libraries/platform/windows/include)
target_include_directories(libmqtt PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Libraries/backoffAlgorithm/include)
target_include_directories(libmqtt PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Libraries/logging)
target_include_directories(libmqtt PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Libraries/mqttMutualAuth)


if(WIN32)

if (MSVC)
	target_link_libraries(libmqtt ${CMAKE_CURRENT_SOURCE_DIR}/Libraries/platform/openssl_x64-windows/lib/libcrypto.lib)
	target_link_libraries(libmqtt ${CMAKE_CURRENT_SOURCE_DIR}/Libraries/platform/openssl_x64-windows/lib/libssl.lib)	
endif (MSVC)

endif(WIN32)
